// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package messenger;

service SupercontractServer {
  rpc ExecuteCall (stream Request) returns (stream Response) {}
}

message SubscribeRequest {
  string tag = 1;
}

message SendMessage

message ClientMessage {
  oneof client_message {
    ExecuteRequest request = 1;
    PaymentAmountReturn payment_amount = 2;
    HeightReturn height = 3;
    HashReturn hash = 4;
    TimestampReturn timestamp = 5;
    PublicKeyReturn public_key = 6;
    BufferReturn buffer = 7;
    InternetReadBufferReturn internet_read_buffer = 8;
    OpenConnectionReturn open_connection_status = 9;
    CloseConnectionReturn close_connection_status = 10;
    OpenFileReturn open_file_status = 11;
    WriteFileReturn write_file_status = 12;
    FileReadBufferReturn file_read_buffer = 13;
    FileOperationReturn file_operation_status = 14;
    Empty empty = 15;
    ListDirReturn entries = 16;
    PathExistReturn path_exist = 17;
    IsFIleReturn is_file = 18;
  }
}

message ServerMessage {

}
